* Change StatusController (Group Address must not in XML Project File) * Clean up some test cases * OpenAPI document + readme.md updated
